# breakfast-embed

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  sentences.txt
.cargo/: config
.devcontainer/: devcontainer.json
client/: index.ts
llm/: server.py
src/: main.rs  types.rs  utils.rs
src/chat/: main.rs
src/cli/: main.rs
src/common/: chat_api_client.rs  embedding_api_client.rs  mod.rs  text_generation.rs
src/store/: main.rs  utils.rs
