[package]
name = "breakfast-embed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant-distance = { git = "https://github.com/drbh/instant-distance.git", branch = "add-incremental-index", features = [
    "with-serde",
] }
pretty-good-embeddings = { git = "https://github.com/drbh/pretty-good-embeddings.git" }
actix-web = "4.3.1"
parking_lot = "0.12.1"
serde_derive = "1.0.160"
serde_json = "1.0.95"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = "0.11.16"
serde-big-array = "0.5.1"
fastbloom-rs = "0.5.3"
rusqlite = "0.29.0"
